2003-12-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Bugfix

2003-12-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster.erl: Updated subscription handling to latest
	XMPP-IM draft

2003-12-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_in.erl: Changed timeout processing, bugfix

	* src/ejabberd_s2s_out.erl: Changed timeout processing

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)

	* src/mod_muc/mod_muc.erl: Better i18n support, added support for
	<registered/> field in iq:register replies (thanks to Sergei
	Golovan)

	* src/mod_register.erl: More i18n support (thanks to Sergei
	Golovan)

2003-12-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix in processing of connection
	replacement

2003-11-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Added workaround for some Java clients

2003-11-27  Alexey Shchepin  <alexey@sevcom.net>

	* examples/mtr/ejabberd.cfg: Updatted (thanks to Marshall T. Rose)

	* src/ejabberd_auth.erl: LDAP attribute that holds user ID now
	configurable
	* src/ejabberd.cfg.example: Updated

2003-11-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Fixed processing of presence probe from
	client

2003-11-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/cyrsasl_digest.erl: Bugfix (thanks to Sergei Golovan)

	* src/ejabberd.cfg.example: Updated

	* src/ejabberd_auth.erl: Support for LDAP authentification
	* src/cyrsasl_digest.erl: Likewise
	* src/mod_register.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise

	* src/eldap/: Imported "eldap" package

	* src/ejabberd_sm.erl: Bugfix

2003-11-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Bugfixes

	* (all): Version 0.5 released

2003-11-13  Alexey Shchepin  <alexey@sevcom.net>

	* examples/mtr/ejabberd: Updated (thanks to Marshall T. Rose)

	* src/Makefile.in: Added installation of msgs/ directory

2003-11-11  Alexey Shchepin  <alexey@sevcom.net>
