@@ -1,3 +1,9 @@
+2003-12-13  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_s2s.erl: Partially rewrited
+
+	* src/mod_roster.erl: Removed debugging code
+
 2003-12-12  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_s2s_out.erl: Bugfix
